<resources>
    <string name="app_name">HelpMeBuy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="fullname">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="fullname_missing">Please enter your full name.</string>
    <string name="email_missing">Please enter your email</string>
    <string name="password_missing">Please enter your password</string>
    <string name="signing_up">Signing up …</string>
    <string name="signing_in">Signing in …</string>
    <string name="signin">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="googleplus_error">Connection cannot be established</string>
    <string name="googleplus_signout">User signed out</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="send_reset_email">Send Password Reset</string>
    <string name="password_reset_instructions">Enter the email address you registered
        with and we\'ll send you instructions on how to reset your password.</string>
    <string name="reset_password_successful">Reset Password Successful! Check your Email.</string>
    <string name="continue_button">Continue</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="alert_dialog_title">Reset Password</string>
    <string name="alert_dialog_message">SignIn successful!\nWARNING: The password inputed will expire within the next 24
        hours.\n\nClick on continue to change password</string>
    <string name="success_login">Login Successful</string>
    <string name="facebook_login_success">Login Successful!</string>
    <string name="facebook_login_cancelled">Facebook login cancelled</string>
    <string name="google_signin_cancel">Google sign cancelled</string>
    <string name="facebook_app_id">972224049482698</string>
    <string name="coming_from">"Coming from "</string>
    <string name="on">"On "</string>
    <string name="connect">Connect</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="message">Message</string>
    <string name="more">More</string>
    <string name="sign_out">Sign out</string>
    <string name="google_sign_out_successful">Google signout successful</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="signIn_cancelled">SignIn Cancelled!</string>
    <string name="signUp_cancelled">SignUp Cancelled!</string>
    <string name="firebase_user_does_not_exist">The specified user does not exist</string>
    <string name="firebase_email_taken">The specified email already exists</string>
    <string name="firebase_email_invalid">The specified email is invalid</string>
    <string name="firebase_password_invalid">The specified password is invalid</string>
    <string name="firebase_credentials_invalid">The specified credentials is invalid</string>
    <string name="firebase_network_error">Network Error</string>
    <string name="firebase_network_disconnected">Network Disconnected</string>
    <string name="firebase_unknown_error">Unknown Error, Try Again</string>
    <string name="select_country">Select Location</string>
    <string name="location_filter">Filter location...</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_create_travel">CreateTravelActivity</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="departure_location_value_summary">Select the location where you are coming from</string>
    <string name="departure_date_value_summary">Select your departure date</string>
    <string name="departure_time_value_summary">Select your departure time</string>
    <string name="arrival_location_value_summary">Select the location where you are going to</string>
    <string name="arrival_date_value_summary">Select your arrival date</string>
    <string name="arrival_time_value_summary">Select your arrival time</string>
    <string name="location_date_format">"DD/MM/YYYY"</string>
    <string name="update_email">Update Email</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_travelers">No travelers available in this Location</string>
    <string name="title_activity_user_settings">Manage Profile</string>
    <string name="title_activity_detailed_profile_settings">DetailedProfileSettings</string>
    <string name="title_activity_change_email">Change Email</string>
    <string name="old_email">Old Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_password_label">Enter your password</string>
    <string name="confirm">Confirm</string>

    <string name="title_activity_connect_travellers">Travellers Connection</string>
    <string name="traveller">Traveller</string>
    <string name="home_country">Home Country</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="connect_message">Type your message</string>
    <string name="connect_button_text">Connect</string>
    <string name="connection_pending">Connection Pending</string>
    <string name="title_activity_request">View Requests</string>
    <string name="connection_message_label">would like to connect with you.</string>
    <string name="connection_accept_label">Accept</string>
    <string name="connection_reject_label">Reject</string>
    <string name="operation_successful">Operation successful</string>
    <string name="operation_failed">Operation failed</string>
    <string name="no_request_found">No Request Found</string>
    <string name="connectionStatus">connectionStatus</string>
    <string name="action_profile">manage profile</string>
    <string name="action_create_travel">create travel</string>
    <string name="title_activity_purchase_request">PurchaseRequest</string>
    <string name="item_name">Name: </string>
    <string name="item_description">Description: </string>
    <string name="item_quantity">Quantity: </string>
    <string name="item_price">Price($): </string>
    <string name="request_recipient">To: </string>
    <string name="purchase_dialog">Add new Item </string>
    <string name="send">send</string>
    <string name="history">History</string>
    <string name="title_activity_purchase_req_response">Request Items</string>
</resources>

