<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_connect_travellers"
    tools:context="com.andela.helpmebuy.activities.ConnectTravellersActivity">


<TextView
    android:layout_marginTop="16dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Traveller Details"
    android:textSize="25sp"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/traveller"
            android:textSize="20sp"
            android:layout_marginRight="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Eston"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_country"
            android:layout_marginRight="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Kenya"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/departure_date"
            android:layout_marginRight="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="2016-01-26"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/arrival_date"
            android:layout_marginRight="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="2016-02-02"/>

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:hint="@string/connect_message"
        android:textColorHint="@color/hint_text_color"
        android:background="@drawable/rectangle_border"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_button_text"
        android:layout_marginTop="16dp"
        android:background="@color/primary_color"
        android:textColor="@color/border_background"
        android:layout_gravity="end"
        android:textSize="16sp"
        android:textStyle="bold"/>

</LinearLayout>
