<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andela.helpmebuy.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/helpmebuy2" />

        <EditText
            android:id="@+id/fullName_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHint="#7fffffff" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHint="#7fffffff" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#7fffffff" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/signup"
            android:text="@string/signup"
            android:textStyle="bold"
            android:onClick="signUp"/>

        <Button
            android:id="@+id/signin_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/already_have_an_account"
            android:onClick="signIn"/>
    </LinearLayout>
</RelativeLayout>
