<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_reset_instructions"
        android:textColorHint="#7fffffff"
        android:textColor="#ffffff"
        android:id="@+id/textView"
        android:layout_marginTop="30dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputStyle"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/send_reset_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email"
            android:textColor="#ffffff"
            android:textColorHint="#7fffffff"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputStyle">
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send_reset_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/send_reset_email"
        android:textStyle="bold"
        android:textColor="#004d40"
        android:onClick="sendTemporaryPassword"/>

</LinearLayout>
