<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/text_details"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
             <TextView
                 android:id="@+id/item_name"
                 android:text="@string/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />

             <TextView
                 android:id="@+id/purchase_requests_item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />

         </LinearLayout>

         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/item_description"
                 android:text="@string/item_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />

             <TextView
                 android:id="@+id/purchase_requests_item_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>

         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/item_price"
                 android:text="@string/item_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />

             <TextView
                 android:id="@+id/purchase_requests_item_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>

    <ImageButton
        android:id="@+id/delete_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_512"
        android:layout_alignBottom="@+id/text_details"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />


</RelativeLayout>