<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andela.helpmebuy.ChangePasswordActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/helpmebuy2" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputStyle"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/old_password"
            android:textColor="#ffffff"
            android:textColorHint="#7fffffff"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputStyle"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/new_password"
            android:textColor="#ffffff"
            android:textColorHint="#7fffffff"
            android:layout_marginTop="80dp"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/change_password"/>


</LinearLayout>
