<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/traveller_profile_picture"
            android:layout_width="@dimen/profile_picture_width"
            android:layout_height="@dimen/profile_picture_height"
            android:scaleType="centerInside"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:id="@+id/traveller_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/traveller_profile_picture"
            android:layout_toEndOf="@id/traveller_profile_picture"
            android:orientation="vertical">

            <TextView
                android:id="@+id/traveller_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/coming_from" />

                <TextView
                    android:id="@+id/traveller_departure_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/on" />

                <TextView
                    android:id="@+id/traveller_departure_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>
            </LinearLayout>

            <Button
                android:id="@+id/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/traveller_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:src="@drawable/ic_more_vert_black_36dp"
            style="?android:attr/borderlessButtonStyle"
            android:alpha="0.54"
            android:layout_alignTop="@+id/traveller_details"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</FrameLayout>